# reversi

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md
conf/: nginx.conf
data/: c_impl_bench.txt  gen_train_data_from_gam.py  search.benchmark
model/: init.model  trained.model
pyreversi/: engine.c  engine.pyx  reversi.py  server.py  setup.py  start_server.sh
script/: remove_bom.py
src/: CMakeLists.txt  README.md  _reversi.cpp  ai.h  board.h  board_test.h  bootstrap.h  common.h  engine.cpp  engine.h  engine.pyx  game.h  game_test.h  logging.cpp  logging.h  make_move.h  make_move.py  neuralnet.h  openings.h  player.h  random.cpp  random.h  reversi.c  reversi.cpp  reversi.py  search.h  server.cpp  server.py  setup.py  start_server.sh  thread.cpp  thread.h  types.cpp  types.h  valid_move.h  valid_move.py  word2vec.h
src-v1/: .gitignore  README.txt  board.h  game_test.h  macros.h  player.h  random.h  reversi.cpp  setup.py  start_server.sh  types.h  word2vec.h
src-v2/: CMakeLists.txt  Makefile  README.md
src-v2/apps/: CMakeLists.txt  addrfind_vs_bitop_speed.cpp  board.cpp  gen_train_data.cpp  reversi.cpp  train_neural_model.cpp
src-v2/bitboard/: board.h  common.h  engine.h  make_move.h  (+2 more)
src/apps/: CMakeLists.txt  board.cpp  gen_train_data.cpp  neuraltrain.cpp  reversi.cpp  test_bitboard.cpp
src/apps/pyreversi/: engine.cpp  engine.pyx  server.py  setup.py
src/bitboard/: bitop.h  board.h  common.h  functor.h  log2.h  make_move.h  mask.h  pos.h  valid_move.h  valid_move_macros.h
src/engine/: ai.h  board.cpp  board.h  common.h  engine.h  game.cpp  game.h  hash.cpp  hash.h  human.cpp  human.h  move.cpp  move.h  neuralnet.cpp  neuralnet.h  openings.cpp  openings.h  player.h  player.h.old  score.h  state.cpp  state.h
src/engine/ai/: book.cpp  book.h  cached_montecarlo.cpp  cached_montecarlo.h  compound.cpp  compound.h  easy.cpp  easy.h  look1.cpp  look1.h  look2.cpp  look2.h  montecarlo.cpp  montecarlo.h  neuralnet.cpp  neuralnet.h  openingbook.cpp  openingbook.h  random.cpp  random.h  random_with_ending_search.cpp  search.cpp  search.h
src/pypp/: bootstrap.h  datetime.h  logging.cpp  logging.h  random.cpp  random.h  timer.h  types.h
src/v2/: board.cpp  board.h  bootstrap.h  logging.h  macros.h
src/v2/engine/: ai.h  board.h  common.h  engine.h  game.h  human.h  move.cpp  neuralnet.h  player.h  score.cpp  score.h
src/v2/pypp/: bootstrap.h  thread.h
test/: search.c
www/: index.html  script.js  style.css  web-reversi.chrunched.js  web-reversi.chrunched.min.js  web-reversi.min.js
(+30 files in other folders)
